# LLMDR_redteam

./: .gitignore  README.md  pyproject.toml
src/llmdr_redteam/: __init__.py
src/llmdr_redteam/audit/: __init__.py  blacklist.py  canonicalize.py  decorator.py  schema.py  status_emit.py  storage.py
src/llmdr_redteam/interpreter/: __init__.py  interpret.py
src/llmdr_redteam/interpreter/audiences/: operator.md  screen.md
src/llmdr_redteam/interpreter/knowledge/: emulate.md  mfkey32.md  nfc.md  rfid.md  triage.md  vingcard.md
src/llmdr_redteam/missions/: __init__.py  audit_smoketest.py  mfkey32_solver.py  nfc_backend.py  nfc_emulate.py  nfc_emulate_backend.py  nfc_mfkey32.py  rfid_backend.py  rfid_capture.py  sensor_backends.py  unknown_identify.py
src/llmdr_redteam/missions/screen/: .gitkeep
tests/: conftest.py  test_audit_smoketest.py  test_blacklist.py  test_canonicalize.py  test_card_fingerprint.py  test_interpreter.py  test_nfc_backend_parse.py  test_nfc_emulate.py  test_nfc_mfkey32.py  test_rfid_backend.py  test_status_emit.py  test_storage_jsonl.py  test_unknown_identify.py
